--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="index.css" />
+    <!-- <link rel="stylesheet" href="../src/styles.css" /> -->
   </head>
   <body>
     <div class="nav-bar">
