--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h5 id="reviews"></h5>
       <h3>Other Properties recommended to you:</h3>
-      <div class="properties"></div>
+      <div class="properties" id="properties"></div>
     </div>
     <script src="index.pack.js"></script>
   </body>
