fixed html for reviews

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h5 id="reviews"></h5>
       <button>Get reviews</button>
-      <h5 id="reviews"></h5>
+      <div class="reviews"></div>
       <div class="break"></div>
       <h3>Other Properties recommended to you:</h3>
       <div class="properties"></div>
