added class to reviews button

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="main-image"></div>
       <h5 id="reviews"></h5>
-      <button>Get reviews</button>
+      <button class="reviews-button">Get reviews</button>
       <div class="reviews"></div>
       <div class="break"></div>
       <h3>Other Properties recommended to you:</h3>
